app/src/styles/core_styles/_common.scss
html {
  padding: 0 48px;
  margin: 0;
  background-color: $color-white;
  background-size: 12px 12px;
  font-family: $font-alt;
  overflow-x: hidden;
  background-image: radial-gradient(circle, $color-brand-light 1px, transparent 1px);

  // RETINA
  @media (-webkit-min-device-pixel-ratio: 2),
  (min-resolution: 192dpi) {
    background-image: radial-gradient(circle, $color-brand-light 1px, transparent 1px);
  }

}

.img-jump {
  // animation-name: pulse;
  // animation-duration: 0.1s;
  // animation-timing-function: linear;
  // animation-direction: normal;
  // animation-iteration-count: 2;
  // animation-play-state: inherit;
}


html,
body {
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.quadrant {
  position: absolute;
  color: $color-gray-darkest;
  display: flex;
  flex-direction: column;
  padding: 72px;

 

  // div {
  //   min-width: 475px;
  //   width: 100%;
  // }

  a {
    border-radius: $radius-round;
    border: 1px solid $color-alt;
    color: $color-alt;
    font-weight: $regular;
    padding: 6px 24px;
    font-size: $type-xxs;
    background: transparent;

    &:hover {
      background: $color-alt;
      color: $color-white;
    }


  }

  &-1 {
    @extend .quadrant;
    left: 48px;
    right: auto;
    top: 0;
    bottom: 50%;
    justify-content: center;
    align-items: flex-start;
    text-align: left;
    align-items: center;
    justify-content: flex-start;
    margin-right: 48px;

    
  }

  &-2 {
    @extend .quadrant;
    left: auto;
    right: 48px;
    top: 0;
    bottom: 50%;
    text-align: right;
    align-items: center;
    justify-content: flex-start;
    margin-left: 48px;

  }

  &-3 {
    @extend .quadrant;
    left: 48px;
    right: auto;
    top: 50%;
    bottom: 0;
    justify-content: center;
    align-items: flex-start;
    text-align: left;
    align-items: center;
    justify-content: flex-start;
    margin-right: 48px;

  }

  &-3b {
    @extend .quadrant;
    left: 48px;
    right: auto;
    top: 0;
    bottom: 0;
    justify-content: center;
    align-items: flex-start;
    text-align: left;
    align-items: center;
    justify-content: flex-start;
    margin-right: 48px;

  }

  &-4 {
    @extend .quadrant;
    left: auto;
    right: 48px;
    top: 50%;
    bottom: 0;
    text-align: right;
    align-items: center;
    justify-content: flex-start;
    margin-left: 48px;

  }
  &-4b {
    @extend .quadrant;
    left: auto;
    right: 48px;
    top: 0;
    bottom: 0;
    text-align: right;
    align-items: center;
    justify-content: flex-start;
    margin-left: 48px;

  }

  &-select {

    position: absolute;
    // transform: translate(-50%);
    transition: all .3s ease;
    position: absolute;

    

    &-1 {
      @extend .quadrant-select;
      top: 0;
      bottom: 20%;
      width: 100%;
      left: 30%;
      div {
        color: $color-gray-darkest;
        display: flex;
        flex-direction: column;
        padding: 72px;
        position: absolute;
        left: 0;
        top: 0;
      }
    }

    &-2 {
      @extend .quadrant-select;
      top: 0;
      bottom: 20%;
      width: 100%;
      left: 0;
      right: 30%;
      div {
        color: $color-gray-darkest;
        display: flex;
        flex-direction: column;
        padding: 72px;
        position: absolute;
        left: 0;
        top: 0;
      }
    }

    &-3 {
      @extend .quadrant-select;
      top: 50%;
      bottom: 20%;
      width: 100%;
      left: 30%;
      div {
        color: $color-gray-darkest;
        display: flex;
        flex-direction: column;
        padding: 72px;
        position: absolute;
        left: 0;
        bottom: 0;
      }
    }

    &-4 {
      @extend .quadrant-select;
      top: 50%;
      bottom: 0;
      width: 100%;
      left: 0;
      right: 30%;
      div {
        color: $color-gray-darkest;
        display: flex;
        flex-direction: column;
        padding: 72px;
        position: absolute;
        right: 0;
        bottom: 0;
      }
    }

    &-0 {
      position: unset;
    }

  }
}

.follow {
  display: flex;
  position: absolute;
  top: calc(50% + 60px);
  left: 10%;
  right: 10%;
  text-align: center;
  justify-content: center;
  align-items: center;
  align-content: center;

  @media (min-width: $break-sm) {
    left: 20%;
    right: 20%;
  }


}


.flex-container {
  width: 100%;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 60px;
  display: flex;
  align-items: center;
  justify-content: center;

  &-lineY {
    animation: delayGrowY;
    animation-duration: 0.3s;
    animation-timing-function: linear;
    animation-direction: normal;
    animation-fill-mode: forwards;
    animation-play-state: inherit;
    animation-delay: .2s;
    height: 0;
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    right: 0;
    bottom: 0;
    left: 50%;
    border-left: 1px solid $color-blue-light;
    transform: translate(-50%);
    transition: all .3s ease;


    &-q0 {
      @extend .flex-container-lineY;
      top: 0;
      right: 50%;
      bottom: 0;
      left: 50%;
      transition: all .3s ease;
    }

    &-q1 {
      @extend .flex-container-lineY;
      top: 0;
      bottom: 0;
      left: 95%;
      right: 5%;
      transition: all .3s ease;
    }

    &-q2 {
      @extend .flex-container-lineY;
      top: 0;
      bottom: 0;
      left: 5%;
      right: 95%;
      transition: all .3s ease;
    }

    &-q3 {
      @extend .flex-container-lineY;
      top: 0;
      bottom: 0;
      left: 95%;
      right: 5%;
      transition: all .3s ease;
    }

    &-q4 {
      @extend .flex-container-lineY;
      top: 0;
      bottom: 0;
      left: 5%;
      right: 95%;
      transition: all .3s ease;
    }
  }

  &-lineX {
    animation: delayGrowX;
    animation-duration: 0.3s;
    animation-timing-function: linear;
    animation-direction: normal;
    animation-fill-mode: forwards;
    animation-play-state: inherit;
    animation-delay: 0s;
    width: 0;
    content: "";
    position: absolute;
    z-index: -1;
    top: 50%;
    bottom: 0;
    left: 0;
    right: 0;
    border-top: 1px solid $color-blue-light;
    transition: all .3s ease;

    &-q0 {
      @extend .flex-container-lineX;
      top: 50%;
      bottom: 0;
      left: 0;
      right: 0;
      transition: all .3s ease;
    }

    &-q1 {
      @extend .flex-container-lineX;
      top: 90%;
      bottom: 0;
      left: 0;
      right: 0;
      transition: all .3s ease;
    }

    &-q2 {
      @extend .flex-container-lineX;
      top: 90%;
      bottom: 0;
      left: 0;
      right: 0;
      transition: all .3s ease;
    }

    &-q3 {
      @extend .flex-container-lineX;
      top: 5%;
      bottom: 0;
      left: 0;
      right: 0;
      transition: all .3s ease;
    }

    &-q4 {
      @extend .flex-container-lineX;
      top: 5%;
      bottom: 0;
      left: 0;
      right: 0;
      transition: all .3s ease;
    }

  }


}

.row {
  width: 100%;
}

.flex-item {
  text-align: center;
  height: auto;
  justify-content: center;
  display: flex;
  padding: 0;
  margin: 0;
  position: absolute;
  top: calc(50% - 36px);
  right: 50%;
  bottom: 50%;
  left: 50%;
  pointer-events: none;
  transition: all .3s ease;

  &-q0 {
    text-align: center;
    height: auto;
    justify-content: center;
    display: flex;
    padding: 0;
    margin: 0;
    position: absolute;
    top: calc(50% - 36px);
    right: 50%;
    bottom: 50%;
    left: 50%;
    transition: all .3s ease;

    img {
      cursor: pointer;
      transform: scale(1);
      transition: $transition-scale;

      &:hover {
        transform: scale(1.1);
        transition: $transition-scale;
      }
    }
  }

  &-q1 {
    @extend .flex-item-q0;

    top: calc(90% - 36px);
    right: 5%;
    bottom: 0;
    left: 95%;

  }

  &-q2 {
    @extend .flex-item-q0;
    top: calc(90% - 36px);
    left: 5%;
    bottom: 0;
    right: 95%;

  }
  
  &-q3 {
    @extend .flex-item-q0;
    top: calc(5% - 36px);
    left: 95%;
    bottom: 90%;
    right: 5%;
    
  }
  &-q4 {
    @extend .flex-item-q0;
    top: calc(90% - 36px);
    left: 5%;
    top: 0%;
    right: 95%;

  }
}


.nudge {
  &-xxs {
    margin-bottom: 3px;
  }

  &-xs {
    margin-bottom: 6px;
  }

  &-sm {
    margin-bottom: 16px;
  }

  &-md {
    margin-bottom: 24px;
  }

  &-lg {
    margin-bottom: 35px;
  }

  &-xl {
    margin-bottom: 65px;
  }

  &-xxl {
    margin-bottom: 120px;
  }
}

